--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
 Django 
-pip install recipe-scrapers
+recipe-scrapers
 
-from django.urls import path
-from django.contrib.auth.models import AbstractUser
-from django.shortcuts import render
-from django.db import IntegrityError
-from django.contrib.auth import authenticate, login, logout
-from django.http import HttpResponse, HttpResponseRedirect
-from django.shortcuts import render, redirect
-from django.urls import reverse
-from django.contrib.messages import constants as messages
-from django.http import JsonResponse
-import json
-import math
+# from django.urls import path
+# from django.contrib.auth.models import AbstractUser
+# from django.shortcuts import render
+# from django.db import IntegrityError
+# from django.contrib.auth import authenticate, login, logout
+# from django.http import HttpResponse, HttpResponseRedirect
+# from django.shortcuts import render, redirect
+# from django.urls import reverse
+# from django.contrib.messages import constants as messages
+# from django.http import JsonResponse
+# import json
+# import math
 
-from recipe_scrapers import scrape_me
+# from recipe_scrapers import scrape_me
 
 
-import string (in helpers.py)
+# import string (in helpers.py)
